--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ghit</title>
+    <script>alert ("Projeto por se iniciar");</script>
 </head>
 <body>
-    <h1>Nobre</h1>
+    <h1>Projeto Web</h1>
 </body>
 </html>
